--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 server:
   port: 8080
-  servlet:
-    context-path: /crud
+#  servlet:
+#    context-path: /crud
 
 spring:
   messages:
@@ -10,7 +10,34 @@ spring:
     date-format: yyyy-MM-dd HH:mm
   thymeleaf:
     cache: false
-
+  datasource:
+    username: litingyu
+    password: litingyu
+    url: jdbc:mysql://118.25.74.142:3306/book
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    #   数据源其他配置
+    initialSize: 5
+    minIdle: 5
+    maxActive: 20
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+    #   监控统计用的filter:stat日志用的filter:log4j防御sql注入的filter:wall
+    filters: stat
+    maxPoolPreparedStatementPerConnectionSize: 20
+    useGlobalDataSourceStat: true
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 
 #spring:
 #  profiles:
